# eiq-manager-tools

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_GH_ANALYZE.md  README_TESTING.md  config.json  gh-analyze  jira-analyze  justfile  pyproject.toml
.cursor/skills/gh-analysis/: SKILL.md
.cursor/skills/pr-review-analysis/: SKILL.md
.pre-commit-hooks/: pytest.sh  ruff-check.sh  ruff-format.sh  ty-check.sh
eiq/gdocs-analysis/: README.md  __init__.py
eiq/gdocs-analysis/docs/: example_config.json
eiq/gdocs-analysis/templates/: gdocs-analysis.jinja2.md  prompt.jinja2.md
eiq/gdocs-analysis/workflows/: __init__.py  analyze.py
eiq/gh-analysis/: README.md  __init__.py
eiq/gh-analysis/docs/: example_config.json
eiq/gh-analysis/templates/: prompt.jinja2.md
eiq/gh-analysis/workflows/: __init__.py  analyze.py
eiq/jira-analysis/: README.md  __init__.py
eiq/jira-analysis/templates/: accomplishments-prompt.jinja2.md  jira-analysis.jinja2.md  prompt.jinja2.md
eiq/jira-analysis/workflows/: analyze.py
eiq/shared/: __init__.py  ai_utils.py  cli_utils.py  config_loader.py  config_utils.py  ladder_utils.py  rich_utils.py
jira-analysis/: README.md
jira-analysis/docs/: example_config.json
jira-analysis/workflows/: __init__.py  analyze.py
ladder/: Matrix.html
ladder/resources/: sheet.css
pr-review-analysis/: README.md
pr-review-analysis/docs/: example_config.json
pr-review-analysis/templates/: gh-analysis.jinja2.md
pr-review-analysis/workflows/: analyze.py
scripts/: add-report  analyze-all  calibrate-reports  clean-reports  convert-pdfs  gdocs-analyze  generate-drive-token.py  generate-review-package  gh-analyze  jira-analyze  notes-analyze  notes-analyze-all  setup-just-completion.sh
shared/: __init__.py  cli_utils.py
tests/: __init__.py  conftest.py  test_analyze_helpers.py  test_analyze_load_config.py  test_cli_utils.py
